# TimeDependentTomography

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  mkdocs.yml  setup.cfg  setup.py
conda/: meta.yaml
scripts/: helper.py  simulations_static.ipynb  testscript.ipynb
scripts/continoustomo/: simulations.ipynb  simulations_static.ipynb  visualization.ipynb
submodules/tdcontroller/: setup.cfg
submodules/tdcontroller/tdcontroller/: controller.py  log.py  main.py
submodules/tomolive/: README.md
submodules/tomolive/BeamSimulator/: tutorial.m
submodules/tomolive/BeamSimulator/classes-structs/: MetaData.m  Params4d.m  RecEval.m  Reconstruction.m  TiltSeries4d.m  (+1 more)
submodules/tomolive/recastgui/: setup.cfg
submodules/tomolive/recastgui/recastgui/: __init__.py  gui.py  gui.py~  main.py
submodules/tomolive/recastgui/recastgui/acquisition_schemes/: acquire.py  acquire.py~  acquire_grs.py
submodules/tomolive/recastgui/recastgui/functions/: alignments.py
submodules/tomolive/recastgui/recastgui/guis/: acquisition.py  alignment.py  alignment_entry.py  data.py  data_entry.py  plugin.py  plugin_entry.py  reconstructor.py  settings.py  submit.py  window.py
submodules/tomolive/recastgui/recastgui/plotter/: plotter.py  plotter.py~
submodules/tomolive/recastgui/recastgui/plugins/: beam_analysis.py  beam_analysis.py~  plugin.py  plugin.py~
submodules/tomolive/recastgui/recastgui/process_handlers/: alignment.py  projection.py  signalid.py
submodules/tomolive/recastgui/recastgui/read_write/: projections.py  rec.py  regtext.py  regtext.py~  reset.py
submodules/tomolive/recastgui/recastgui/structs/: classes.py  enums.py
submodules/tomondt/: .gitignore  Readme.md  mkdocs.yml  setup.cfg  setup.py
submodules/tomondt/docs/: apis.md  index.md
submodules/tomondt/scripts/: deformations_example.ipynb  napari.ipynb  plotting_example.ipynb  processing_example.ipynb  projections_example.ipynb  scripting.ipynb  viewing_example.ipynb  vmf_example.ipynb
submodules/tomondt/tests/: helpers.py  test_000_init.py  test_010_x_v0.py  test_011_x_v1.py  test_02x_deforms.py  test_03x_project.py  test_04x_quantify.py
submodules/tomondt/tomondt/: operators.py
(+43 files in other folders)
