[metadata]
name = tdtomo
version = attr: ttomonapari.__version__
license = GPL3.0
author = Timothy Craig
author_email = tcraig258@gmail.com
description = A library for running time-dependent tomography modules in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tcraig088/TimeDependentTomography
project_urls =
    Bug Tracker = https://github.com/Tcraig088/TimeDependentTomography/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tdtomo
python_requires = >=3.10
