[metadata]
name = tdcontroller
version = attr: tdcontroller.__version__
license = GPL3.0
author = Timothy Craig
author_email = tcraig258@gmail.com
description = A library for running time-dependent tomography modules in napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/Tcraig088/tdtomonapari
project_urls =         
    Bug Tracker = https://github.com/Tcraig088/tdtomonapari/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tdcontroller
python_requires = >=3.10
install_requires =
    tomocontrol
