[metadata]
name = recastgui
version = 0.1.0
author = Timothy Craig
author_email = tim.craig@uanwerpen.be
description = A small GUI for running RECAST3D with GRS acquisition for undersampling monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/yourproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    matplotlib
    hyperspy
    scikit-learn
    
[options.extras_require]
dev =
    pytest
    black

[options.entry_points]
console_scripts =
    recastgui = recastgui.main:main